@@ -1,8 +1,9 @@
-$Id: ChangeLog,v 1.49 2008/08/03 21:44:12 tat Exp $
+$Id: ChangeLog,v 1.50 2008/08/13 11:07:11 tat Exp $
 
 ChangeLog file of LibU - http://www.koanlogic.com/libu/index.html
 
 LibU x.y.z:
+    - [config] u_config_sort_children added
     - [config] u_config_del_child added
 	- [log] u_log_set_{lock,unlock} added to setup locking callbacks (needed on 
 	  multi-threading environments)
